--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
-# Test data file
+# Test data files
+test/data/*
 *.csv
 *.json
 
