--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - "8086:8086"
     restart: always
     volumes:
-      - /opt/gosstrak/influxdb:/var/lib/influxdb
+      - ./test/data/influxdb:/var/lib/influxdb
     networks:
       gosstrak:
         ipv4_address: 172.1.234.2
@@ -50,7 +50,7 @@ services:
     links:
       - influxdb
     volumes:
-      - /opt/gosstrak/grafana:/var/lib/grafana
+      - ./test/data/grafana:/var/lib/grafana
     environment:
       - GF_INSTALL_PLUGINS=grafana-clock-panel,briangann-gauge-panel,natel-plotly-panel,grafana-simple-json-datasource
     networks:
