--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 script:
   #- go test -v ./... -covermode=count -coverprofile=coverage.out
   #- $GOPATH/bin/goveralls -service=travis-ci -coverprofile=coverage.out
-  - go test -race -coverprofile=coverage.txt -covermode=atomic
+  - go test -v ./... -race -covermode=atomic -coverprofile=coverage.txt
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
